name:                  glyph-cli
version:               0.1.0.0
synopsis:              Command-line interface for the Glyph handwriting
                       synthesis engine
description:           TODO
homepage:              https://github.com/spinda/glyph-cli#readme
bug-reports:           https://github.com/spinda/glyph-cli/issues
license:               BSD3
license-file:          LICENSE
author:                Michael Smith
maintainer:            Michael Smith <michael@spinda.net>
copyright:             2016 Michael Smith
category:              Graphics
build-type:            Simple
cabal-version:         >=1.10

executable glyph
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.4 && < 5
                     , glyph
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/spinda/glyph-cli

